# impf

./: .gitignore  APIs.md  CMakeLists.txt  Dockerfile  Doxyfile  README.md  setup.py  test.ipynb  test_expr.ipynb  test_optm.ipynb
.github/workflows/: cmake.yml
docs/: annotated.html  citelist.html  classes.html  dir_0a6981b8368411a772827ab6f6f55f04.html  dir_3489694549bbd9436fa14ad93f5d88f9.html  dir_3be08783c9d7da0ed76657d4a2eb0bf5.html  dir_56fce9561eeac616eb89ebb19a3879e2.html  dir_9846da24b875a898722310589a600526.html  dir_c3f901ba2ccafa563073f99b61a52548.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.css  eg____heat2_d_8c_source.html  eg__def__wrp__1f1_8c_source.html  eg__diff__impf__grd__f2_8c_source.html  eg__diff__impf__jacob_8c_source.html  eg__dts__impf__df__distances_8c_source.html  eg__dts__impf__df__norms_8c_source.html  eg__dts__impf__mat__eyes_8c_source.html  eg__dts__impf__mat__ones_8c_source.html  eg__dts__impf__mat__transmajor_8c_source.html  eg__dts__impf__mat__transmajor__inplace_8c_source.html  eg__dts__impf__mat__transpose_8c_source.html  eg__dts__impf__mat__zeros_8c_source.html  eg__dts__impf__submat__subtract_8c_source.html  eg__dts__impf__t__mat_8c_source.html  eg__dts__impf__t__vec_8c_source.html  eg__linalg__lsolve_8c_source.html  eg__linalg__lsolve__2_a2__2b_8c_source.html  eg__linalg__lsolve__3_a3__3b_8c_source.html  eg__root__impf__1f1__newton_8c_source.html  eg__root__impf__2f2__array__newton_8c_source.html  eg__root__impf__2f2__newton_8c_source.html  eg__root__impf__3f3__array__newton_8c_source.html  eg__root__impf__3f3__newton_8c_source.html  eg__root__newton__1f1_8c_source.html  eg__root__newton__2f2_8c_source.html  eg__root__newton__3f3_8c_source.html  files.html  functions.html  (+153 more)
docs/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  classes_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_0.js  groups_2.js  groups_4.js  groups_7.js  groups_8.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js
example/: CMakeLists.txt  eg__heat2D.c
example/def/: eg_def_wrp_1f1.c
example/dts/: CMakeLists.txt  eg_dts_impf_df_distances.c  eg_dts_impf_df_norms.c  eg_dts_impf_mat_eyes.c  eg_dts_impf_mat_ones.c  eg_dts_impf_mat_transmajor.c  eg_dts_impf_mat_transmajor_inplace.c  eg_dts_impf_mat_transpose.c  eg_dts_impf_mat_zeros.c  eg_dts_impf_submat_subtract.c  eg_dts_impf_t_mat.c  eg_dts_impf_t_vec.c
example/linalg/: CMakeLists.txt  eg_linalg_lsolve.c  eg_linalg_lsolve_2A2_2b.c  eg_linalg_lsolve_3A3_3b.c
example/ndiff/: CMakeLists.txt  eg_diff_impf_grd_f2.c  eg_diff_impf_jacob.c
example/root/: CMakeLists.txt  eg_root_impf_1f1_newton.c  eg_root_impf_2f2_newton.c  eg_root_impf_3f3_newton.c  eg_root_newton_1f1.c  eg_root_newton_2f2.c  eg_root_newton_3f3.c
impf/: __init__.py  _io.py  _utils.py  expr.py  io.py  optm.py
include/impf/: _magics.h  diff.h  fmin.h  fmin_lp.h  fmin_qp.h  impf.h  impf_approx.h  impf_basic.h  impf_basic_blas.h  impf_basic_rfs.h  impf_linalg.h  impf_ndiff.h  impf_nls.h  impf_opt.h  impf_root.h  linalg.h  lp.h  root.h  utils.h
resource/: DoxygenLayout.xml  ref.bib
resource/notes/: Doc_Approx_Poly.md
src/: diff_1f1.c  diff_1f2.c  diff_2f1.c  diff_2fn.c  diff_3f1.c  impf_approx_poly.c  impf_blas_datastructs.c  impf_blas_distances.c  impf_blas_multiplications.c  impf_blas_operations.c  impf_linalg.c  impf_ndiff.c  impf_root.c  linalg_daxpy.c  linalg_dgels_2.c  linalg_dgels_3.c  linalg_dgels_L.c  linalg_dgels_n.c  linalg_dscal.c  lp_readmps.c  lp_simplex_gen.c  lp_simplex_std.c  lp_simplex_wrp.c  pyoptm.c  pytest.c  pywrp_optm.c  pywrp_test.c  root_1f1_bisection.c  root_1f1_newton.c  root_1f1_secant.c  root_2f2_newton.c  root_3f3_newton.c  root_nfn_newton.c  utils.c
src/diff/: 1f3.c  1fn.c  2f2.c  2f3.c  3f2.c  3f3.c  3fn.c  mfn.c
src/linalg/: daxpy.c  dgels.c  dgels_2.c  dgels_3.c  dgels_L.c  dgels_n.c  dscal.c
src/lp/: .simplex_std.c.swp  readmps.c  simplex_gen.c  simplex_std.c  simplex_wrp.c
src/root/: 1f1_newton.c  1f1_secant.c  2f2_newton.c  3f3_newton.c  bisection.c  newton.c  nfn_newton.c
test/: CMakeLists.txt  test_diff_mf1.c  test_diff_mf2.c  test_diff_mf3.c  test_diff_mfn.c  test_linalg_dgels.c  test_lp_simplex_1.c  test_lp_simplex_2.c  test_lp_simplex_3.c  test_lp_simplex_4.c  test_lp_simplex_5.c  test_lp_simplex_6.c  test_lp_simplex_7.c  test_lp_simplex_netlib.c  test_root_1f1.c  test_root_2f2.c  test_root_3f3.c  test_root_nfn.c
